<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.gosu-lang.gosu</groupId>
  <artifactId>gosu-parent</artifactId>
  <version>1.18.7-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Gosu :: Parent POM</name>
  <description>Gosu is a pragmatic programming language for the JVM.</description>
  <url>http://gosu-lang.github.io/</url>

  <licenses>
    <license>
    <name>The Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>The Gosu Team</name>
      <email>gosu.lang.team@gmail.com</email>
      <organization>Guidewire</organization>
      <organizationUrl>http://gosu-lang.github.io/</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>${scm.root}/gosu-lang.git</connection>
    <developerConnection>${scm.root}/gosu-lang.git</developerConnection>
    <url>https://github.com/gosu-lang/gosu-lang</url>
    <tag>rel/1.18.7</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <dist.mvn.central.snapshotrepo.url>https://central.sonatype.com/repository/maven-snapshots/</dist.mvn.central.snapshotrepo.url>
    <scm.root>scm:git:git@github.com:gosu-lang</scm.root>
  </properties>

  <build>
    <resources>
      <resource>
        <directory>src/main/gosu</directory>
      </resource>
      <resource>
        <directory>src/test/gosu</directory>
      </resource>
      <resource>
        <directory>src/main/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
      <resource>
        <directory>src/main/resources</directory>
      </resource>
      <resource>
        <directory>${generated.version.dir}</directory>
      </resource>
    </resources>

    <pluginManagement>
      <plugins>
        <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.3</version>
         <configuration>
           <source>11</source>
           <target>11</target>
           <encoding>UTF-8</encoding>
         </configuration>
       </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>2.2.1</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.1.1</version>
          <configuration>
            <encoding>UTF-8</encoding>
            <doclint>none</doclint>
            <additionalOptions>
              <option>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</option>
              <option>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</option>
              <option>--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</option>
              <option>--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</option>
              <option>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</option>
              <option>--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED</option>
              <option>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</option>
              <option>--add-exports=jdk.compiler/com.sun.tools.javac.platform=ALL-UNNAMED</option>
              <option>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</option>
              <option>--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</option>
              <option>--add-exports=java.base/sun.security.action=ALL-UNNAMED</option>
              <option>--add-exports=java.desktop/sun.font=ALL-UNNAMED</option>
              <option>--add-exports=java.desktop/sun.swing=ALL-UNNAMED</option>
              <option>--add-exports=java.desktop/sun.swing.icon=ALL-UNNAMED</option>
              <option>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</option>
              <option>--add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED</option>
            </additionalOptions>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
          <executions>
            <execution>
              <id>default-deploy</id>
              <phase>none</phase>
            </execution>
          </executions>
          <configuration>
            <deployAtEnd>true</deployAtEnd>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.3.2</version>
          <configuration>
            <archive>
              <manifest>
                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
              </manifest>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.19.1</version>
          <configuration>
            <redirectTestOutputToFile>true</redirectTestOutputToFile>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
          <version>1.9.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-release-plugin</artifactId>
          <version>2.5.3</version>
        </plugin>

      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>3.0.1</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <autoVersionSubmodules>true</autoVersionSubmodules>
          <releaseProfiles>release</releaseProfiles>
          <tagNameFormat>v@{project.version}</tagNameFormat>
          <updateBranchVersions>false</updateBranchVersions>
          <updateWorkingCopyVersions>false</updateWorkingCopyVersions>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>publish-to-GW</id>
      <distributionManagement>
        <repository>
          <id>publish.to.gw.repository.id</id>
          <url>${env.PUBLISH_TO_REPOSITORY_URL}</url>
        </repository>
      </distributionManagement>
    </profile>
    <profile>
      <id>central</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.8.0</version>
            <executions>
              <execution>
                <id>deploy-central</id>
                <phase>deploy</phase>
                <goals>
                  <goal>publish</goal>
                </goals>
              </execution>
            </executions>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
            </configuration>
          </plugin>
        </plugins>
      </build>
      <distributionManagement>
        <repository>
          <id>central</id>
          <url>${dist.mvn.central.snapshotrepo.url}</url>
        </repository>
      </distributionManagement>
    </profile>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.1.1</version>
            <configuration>
              <encoding>UTF-8</encoding>
              <doclint>none</doclint>
              <additionalOptions>
                <option>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</option>
                <option>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</option>
                <option>--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</option>
                <option>--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</option>
                <option>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</option>
                <option>--add-exports=jdk.compiler/com.sun.tools.doclint=ALL-UNNAMED</option>
                <option>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</option>
                <option>--add-exports=jdk.compiler/com.sun.tools.javac.platform=ALL-UNNAMED</option>
                <option>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</option>
                <option>--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</option>
                <option>--add-exports=java.base/sun.security.action=ALL-UNNAMED</option>
                <option>--add-exports=java.desktop/sun.font=ALL-UNNAMED</option>
                <option>--add-exports=java.desktop/sun.swing=ALL-UNNAMED</option>
                <option>--add-exports=java.desktop/sun.swing.icon=ALL-UNNAMED</option>
                <option>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</option>
                <option>--add-exports=java.desktop/sun.awt.shell=ALL-UNNAMED</option>
              </additionalOptions>
            </configuration>
            <executions>
              <execution>
                <id>attach-javadocs</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.5</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>0.8.0</version>
            <executions>
              <execution>
                <id>deploy-central</id>
                <phase>deploy</phase>
                <goals>
                  <goal>publish</goal>
                </goals>
              </execution>
            </executions>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>central</publishingServerId>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <version>4.12</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

</project>
